修正圖片位置

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p>YES[Y]</p><p>NO[N]</p>
         </div>
     </div>
-    <script src="js/snake.js"></script>
+    <script src="snake.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/13.3.10/Tone.min.js"></script>
 </body>
 </html>
